# fluent-pad

./: .gitignore  README.md  build.sh  build_app.sh  deploy.sh  deploy_docker.sh  package-lock.json  package.json
app/: app.config.json  app.config.with_storage.json  remove_disconnected.air  set_tetraplet.air
client/: .gitignore  package-lock.json  package.json
client/aqua/: app.aqua  common.aqua  fluent-pad.aqua  history.aqua  user-list.aqua
client/src/: app.json  index.tsx
client/src/_aqua/: app.ts
client/src/app/: App.scss  App.tsx  App1.tsx  CollaborativeEditor.tsx  FluenceClientContext.ts  UserList.tsx  api.ts  constants.ts  sync.ts
client/src/aqua/: app.ts  builtin.ts  (+2 more)
scripts/: add_message.air  join.air  set_tetraplet.air
services/: README.md  build.sh  history_Config.toml  userlist_Config.toml
services/artifacts/: history.json  user-list.json  user_list.json
services/history-inmemory/: Cargo.toml
services/history-inmemory/src/: entry.rs  errors.rs  history_entry.rs  main.rs  message.rs  results.rs  service_api.rs  storage_api.rs  utils.rs
services/history-inmemory/src/storage_api/: utils.rs
services/tests/: Cargo.toml  HistoryTestConfig.toml  UserListTestConfig.toml
services/user-list/: Cargo.toml
services/user-list-inmemory/: Cargo.toml
services/user-list-inmemory/src/: errors.rs  main.rs  results.rs  service_api.rs  storage_api.rs  user.rs
services/user-list/src/: errors.rs  main.rs  service_api.rs  storage_api.rs
src/: App.tsx  index.tsx
src/app/: App.tsx
src/demo/: 1_asyncCall.tsx  2_eventStream.tsx  3_service.tsx  4_grapgql_adapter.tsx
src/fluence/: FluentPadClient.ts  calls.ts  constants.ts  environments.ts  index.ts
(+20 files in other folders)
