[package]
name = "history"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"

[[bin]]
name = "history"
path = "src/main.rs"

[dependencies]
fluence = { git = "https://github.com/fluencelabs/rust-sdk", features = ["logger"] }
fce-sqlite-connector = "=0.1.3"

anyhow = "1.0.31"
boolinator = "2.4.0"
log = "0.4.8"
once_cell = "1.4.1"
