[package]
name = "user-list"
version = "0.1.0"
authors = ["Fluence Labs"]
edition = "2018"

[[bin]]
name = "user-list"
path = "src/main.rs"

[dependencies]
fluence = { git = "https://github.com/fluencelabs/rust-sdk", features = ["logger"] }
fce-sqlite-connector = "=0.1.3"

anyhow = "1.0.31"
boolinator = "2.4.0"
log = "0.4.8"
once_cell = "1.4.1"

[dev-dependencies]
fluence-app-service = "0.1.19"
uuid = { version = "0.8.1", features = ["v4"] }
serde_json = "1.0.59"
